--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
-<form>
-  <h4>mat-select</h4>
+<form [formGroup]="lancamentoForm">
+  <h4>Lançamento</h4>
   <mat-form-field>
-    <mat-label>Favorite food</mat-label>
-    <mat-select [(ngModel)]="selectedValue" name="food">
-      <mat-option *ngFor="let food of foods" [value]="food.value">
-        {{food.viewValue}}
-      </mat-option>
-    </mat-select>
+    <mat-label>Tipo de lançamento</mat-label>
+      <mat-select formControlName="lancamento" name="lancamento">
+        <mat-option *ngFor="let l of lancamentos" [value]="l.value">
+          {{l.viewValue}}
+        </mat-option>
+      </mat-select>
   </mat-form-field>
-  <p> Selected food: {{selectedValue}} </p>
 </form>
