INserindo imagem no projeto.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
 <div class="initial">
-  <!-- <figure class="html5">
-  <img src="assets\JULIANNO_Email.png" alt="Tutorial de CSS" title="Logo do CSS" width="150" height="150" />
-  <figcaption>Tutorial de HTML5</figcaption>
-</figure> -->
+
+  <div class="logo">
+    <img width="128" src="assets/logo.jpg">
+   </div>
+
+<mat-card>Sistema de gerênciamento de ponto da<strong>P21 Sistemas</strong> </mat-card>
+
   <div class="select">
     <form [formGroup]="lancamentoForm">
       <h4>Lançamento</h4>
