--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,17 @@
-.initial {
-    text-align: center;
+  .logo {
+    display: flex;
+    align-items: center;
+
+    .logo-icon {
+        width: 24px;
+        height: 24px;
     }
 
-.select {
-    text-align: left;
+    .logo-text {
+        margin-left: 12px;
+        font-size: 16px;
+        font-weight: 300;
+        letter-spacing: 0.4px;
+        line-height: normal;
+    }
 }
-
