--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
 
   <div class="logo">
     <img width="128" src="assets/logo.jpg">
-   </div>
+  </div>
 
-<mat-card>Sistema de gerênciamento de ponto da<strong>P21 Sistemas</strong> </mat-card>
+  <mat-card>Sistema de gerênciamento de ponto da <strong>P21 Sistemas</strong> </mat-card>
 
   <div class="select">
     <form [formGroup]="lancamentoForm">
@@ -20,9 +20,9 @@
     </form>
   </div>
 
-  <button mat-button color="primary">
-    Confirmar
-  </button>
-  <button mat-button color="warn">Cancelar</button>
+  <div class="button-row">
+    <button mat-stroked-button color="primary">Confirmar</button>
+    <button mat-stroked-button color="warn">Cancelar</button>
+  </div>
 
 </div>
