--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,11 @@
     <img width="128" src="assets/logo.jpg">
   </div>
 
-  <mat-card>Sistema de gerênciamento de ponto da <strong>P21 Sistemas</strong> </mat-card>
+  <mat-card>Sistema de gerênciamento de ponto da <strong>P21 Sistemas</strong> </mat-card><br />
 
   <div class="select">
     <form [formGroup]="lancamentoForm">
-      <h4>Lançamento</h4>
+      <h4 class="textSelect">Lançamento</h4>
       <mat-form-field>
         <mat-label>Tipo de lançamento</mat-label>
         <mat-select formControlName="lancamento" name="lancamento">
@@ -18,7 +18,7 @@
         </mat-select>
       </mat-form-field>
     </form>
-  </div>
+  </div><br />
 
   <div class="button-row">
     <button mat-stroked-button color="primary">Confirmar</button>
