--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
   
-  .logo {
+.logo {
     display: flex;
     align-items: center;
     text-align: center;
@@ -8,6 +8,10 @@
 button,
  .mat-icon-button,
   .mat-stroked-button {
-
+    margin-top: 20px;
     margin-right: 10px;
+}
+
+.textSelect {
+  margin-bottom: 0%;
 }
