--- a/src/app/login/login-form.component.html
+++ b/src/app/login/login-form.component.html
@@ -20,7 +20,7 @@
         </p>
 
         <div class="button">
-          <button type="submit" mat-button routerLink="/lancamento">Login</button>
+          <button type="submit" mat-button (click)="gerarPDF()">Login</button>
         </div>
 
       </form>
