--- a/src/app/lancamento/lancamento.component.html
+++ b/src/app/lancamento/lancamento.component.html
@@ -22,7 +22,7 @@
   
     <div class="button-row">
       <button mat-stroked-button color="primary" (click)="openSnackBar('Lançamento efetuado com sucesso.', 'OK')">Confirmar</button>
-      <button mat-stroked-button color="warn">Cancelar</button>
+      <button mat-stroked-button color="warn" routerLink="/login">Cancelar</button>
     </div>
   
   </div>
