--- a/src/app/login/login-form.component.html
+++ b/src/app/login/login-form.component.html
@@ -2,16 +2,16 @@
   <mat-card>
     <mat-card-title>SGP21 - Login</mat-card-title>
     <mat-card-content>
-      <form [formGroup]="form" (ngSubmit)="submit()">
+      <form [formGroup]="form" (ngSubmit)="openDialog()">
         <p>
           <mat-form-field>
-            <input type="text" matInput placeholder="Username" formControlName="username">
+            <input type="text" matInput placeholder="Username" formControlName="username" required>
           </mat-form-field>
         </p>
 
         <p>
           <mat-form-field>
-            <input type="password" matInput placeholder="Password" formControlName="password">
+            <input type="password" matInput placeholder="Password" formControlName="password" required>
           </mat-form-field>
         </p>
 
@@ -20,7 +20,7 @@
         </p>
 
         <div class="button">
-          <button type="submit" mat-button (click)="gerarPDF()">Login</button>
+          <button type="submit" mat-button [disabled]="!form.valid" >Login</button>
         </div>
 
       </form>
