--- a/src/app/lancamento/lancamento.component.html
+++ b/src/app/lancamento/lancamento.component.html
@@ -6,6 +6,8 @@
   
     <mat-card>Sistema de gerênciamento de ponto da <strong>P21 Sistemas</strong> </mat-card><br />
   
+    <p>Seja bem vindo <strong>{{nome}}</strong>.</p>
+    
     <div class="select">
       <form [formGroup]="lancamentoForm">
         <h4 class="textSelect">Lançamento</h4>
