--- a/src/app/login/login-form.component.html
+++ b/src/app/login/login-form.component.html
@@ -20,7 +20,7 @@
         </p>
 
         <div class="button">
-          <button type="submit" mat-button [disabled]="!form.valid" >Login</button>
+          <button type="submit" mat-button [disabled]="!form.valid" (click)="login()">Login</button>
         </div>
 
       </form>
