--- a/src/app/lancamento/lancamento.component.html
+++ b/src/app/lancamento/lancamento.component.html
@@ -23,7 +23,7 @@
     </div><br />
   
     <div class="button-row">
-      <button mat-stroked-button color="primary" (click)="openSnackBar('Lançamento efetuado com sucesso.', 'OK')">Confirmar</button>
+      <button mat-stroked-button color="primary" (click)="confirmar()">Confirmar</button>
       <button mat-stroked-button color="warn" routerLink="/login">Cancelar</button>
     </div>
   
