--- a/src/app/lancamento/lancamento.component-dialog.html
+++ b/src/app/lancamento/lancamento.component-dialog.html
@@ -3,7 +3,7 @@
   <p>A lei vigente não permite que você bata o ponto antes da 8:00 horas.
     O seu horário será lançado com a entrada às 8:00 horas, para continuar digite seu nome?</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="nome">
+    <input matInput [(ngModel)]="nome" required>
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
