--- a/src/app/login/login-form.component.html
+++ b/src/app/login/login-form.component.html
@@ -1,3 +1,4 @@
+
 <div>
   <mat-card>
     <mat-card-title>SGP21 - Login</mat-card-title>
@@ -22,7 +23,7 @@
         <div class="button">
           <button type="submit" mat-button [disabled]="!form.valid" (click)="login()">Login</button>
         </div>
-
+        <mat-checkbox>Lembrar</mat-checkbox>
       </form>
     </mat-card-content>
   </mat-card>
