--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,4 +1,10 @@
 .titulo{
     text-align: center;
-   height: 50px;
+    height: 50px;
 }
+
+.relatorio{
+    margin: auto;
+    text-align: center;
+}
+
