--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,11 +2,9 @@
     <img width="55" src="assets/logo.jpg">
 </mat-card><br />
 
+<mat-card>
 
-
-<mat-card class="relatorio" fxLayout="row">
-
-    <div fxLayoutAlign="start start" fxFlex="20">
+    <div fxLayoutAlign="center" fxFlex="20" fxLayout="row inline">
         <mat-form-field>
             <input matInput [matDatepicker]="picker" placeholder="Selecione a data">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
