--- a/src/app/login/login-form.component.html
+++ b/src/app/login/login-form.component.html
@@ -3,21 +3,17 @@
   <mat-card>
     <mat-card-title>SGP21 - Login</mat-card-title>
     <mat-card-content>
-      <form [formGroup]="form" (ngSubmit)="openDialog()">
+      <form [formGroup]="form">
         <p>
           <mat-form-field>
-            <input type="text" matInput placeholder="Username" formControlName="username" required>
+            <input type="text" matInput placeholder="Login" formControlName="login" required>
           </mat-form-field>
         </p>
 
         <p>
           <mat-form-field>
-            <input type="password" matInput placeholder="Password" formControlName="password" required>
+            <input type="password" matInput placeholder="Senha" formControlName="senha" required>
           </mat-form-field>
-        </p>
-
-        <p *ngIf="error" class="error">
-          {{ error }}
         </p>
 
         <div class="button">
