Ajustes na comunicação com a API

--- a/src/app/login/login-form.component.html
+++ b/src/app/login/login-form.component.html
@@ -6,7 +6,7 @@
       <form [formGroup]="form">
         <p>
           <mat-form-field>
-            <input type="text" matInput placeholder="Login" formControlName="login" required>
+            <input type="text" matInput placeholder="Login" formControlName="login" required appUppercase>
           </mat-form-field>
         </p>
 
