--- a/src/app/lancamento/lancamento.component.scss
+++ b/src/app/lancamento/lancamento.component.scss
@@ -8,9 +8,15 @@
     .mat-stroked-button {
       margin-top: 20px;
       margin-right: 10px;
+      align-items: initial;
   }
   
   mat-form-field {
     margin-right: 12px;
+  }
+
+
+  .cardLancamento{
+    width: 400px;
   }
 
