--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
-
+<div class="initial">
+    <mat-card>
+        <h3>Sistema de gerênciamento de ponto</h3>
+        <img width="85" src="assets/logo.jpg">
+    </mat-card><br />
+</div>
 
 
 <router-outlet *ngIf="true"></router-outlet>
+
 
