--- a/src/app/login/login-form.component.html
+++ b/src/app/login/login-form.component.html
@@ -1,7 +1,12 @@
 
 <div>
   <mat-card>
-    <mat-card-title>SGP21 - Login</mat-card-title>
+      <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>SGP21 - Login</mat-card-title>
+          <mat-card-subtitle>P21 Sistemas</mat-card-subtitle>
+        </mat-card-header>
+ 
     <mat-card-content>
       <form [formGroup]="form">
         <p>
